--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   min-width: 800px;
   margin: 0;
   padding-top: 60px;
+  background-color: #FDAFE7;
 }
 
 body::before {
@@ -41,7 +42,7 @@ body::before {
   font-family: 'Raleway', sans-serif;
   font-size: 116px;
   font-weight: 800;
-  letter-spacing: 3.5px;
+  letter-spacing: 0.035em;
   line-height: 136px;
   text-transform: uppercase;
   color: #000;
@@ -66,7 +67,6 @@ body::before {
   position: absolute;
   top: 180px;
   right: 20px;
-  margin-bottom: 562px;
   font-family: 'Raleway', sans-serif;
   font-size: 35px;
   font-weight: 400;
